@@ -37,6 +37,7 @@ import com.alibaba.excel.read.metadata.ReadSheet;
 import com.alibaba.excel.support.ExcelTypeEnum;
 import com.apitable.automation.entity.AutomationRobotEntity;
 import com.apitable.automation.model.AutomationCopyOptions;
+import com.apitable.automation.model.TriggerCopyResultDto;
 import com.apitable.automation.service.IAutomationRobotService;
 import com.apitable.base.enums.DatabaseException;
 import com.apitable.base.enums.ParameterException;
@@ -53,8 +54,8 @@ import com.apitable.integration.grpc.NodeCopyRo;
 import com.apitable.integration.grpc.NodeDeleteRo;
 import com.apitable.interfaces.ai.facade.AiServiceFacade;
 import com.apitable.interfaces.ai.model.AiCreateParam;
-import com.apitable.interfaces.ai.model.AiType;
 import com.apitable.interfaces.ai.model.AiUpdateParam;
+import com.apitable.interfaces.document.facade.DocumentServiceFacade;
 import com.apitable.interfaces.social.facade.SocialServiceFacade;
 import com.apitable.interfaces.social.model.SocialConnectInfo;
 import com.apitable.organization.dto.MemberDTO;
@@ -103,6 +104,7 @@ import com.apitable.workspace.enums.NodeException;
 import com.apitable.workspace.enums.NodeType;
 import com.apitable.workspace.enums.PermissionException;
 import com.apitable.workspace.enums.ResourceType;
+import com.apitable.workspace.facade.NodeFacade;
 import com.apitable.workspace.listener.CsvReadListener;
 import com.apitable.workspace.listener.MultiSheetReadListener;
 import com.apitable.workspace.mapper.NodeMapper;
@@ -110,6 +112,7 @@ import com.apitable.workspace.mapper.NodeShareSettingMapper;
 import com.apitable.workspace.model.DatasheetCreateObject;
 import com.apitable.workspace.ro.CreateDatasheetRo;
 import com.apitable.workspace.ro.NodeCopyOpRo;
+import com.apitable.workspace.ro.NodeEmbedPageRo;
 import com.apitable.workspace.ro.NodeMoveOpRo;
 import com.apitable.workspace.ro.NodeOpRo;
 import com.apitable.workspace.ro.NodeRelRo;
@@ -138,6 +141,7 @@ import com.apitable.workspace.vo.ShowcaseVo.NodeExtra;
 import com.baomidou.mybatisplus.core.toolkit.IdWorker;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.baomidou.mybatisplus.extension.toolkit.SqlHelper;
+import jakarta.annotation.Resource;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -145,6 +149,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -153,8 +158,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.integration.redis.util.RedisLockRegistry;
@@ -169,7 +174,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> implements INodeService {
 
     @Resource
-    private NodeMapper nodeMapper;
+    private NodeFacade nodeFacade;
 
     @Resource
     private INodeDescService iNodeDescService;
@@ -246,16 +251,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Resource
     private IAutomationRobotService iAutomationRobotService;
 
+    @Resource
+    private DocumentServiceFacade documentServiceFacade;
+
     @Override
     public String getRootNodeIdBySpaceId(String spaceId) {
         log.info("The root node ID of the query space [{}]", spaceId);
-        return nodeMapper.selectRootNodeIdBySpaceId(spaceId);
+        return baseMapper.selectRootNodeIdBySpaceId(spaceId);
     }
 
     @Override
     public List<String> getNodeIdBySpaceIdAndType(String spaceId, Integer type) {
         log.info("The ID of the query space [{}] node type [{}]", spaceId, type);
-        return nodeMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
+        return baseMapper.selectNodeIdBySpaceIdAndType(spaceId, type);
     }
 
     @Override
@@ -263,32 +271,36 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                                                             String keyword) {
         log.info("The ID of the query space [{}] node types [{}] keyword [{}]", spaceId, type,
             keyword);
-        return nodeMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
+        return baseMapper.selectNodeIdsBySpaceIdAndTypeAndKeyword(spaceId, type, keyword);
     }
 
     @Override
     public NodeType getTypeByNodeId(String nodeId) {
-        Integer type = nodeMapper.selectNodeTypeByNodeId(nodeId);
+        Integer type = baseMapper.selectNodeTypeByNodeId(nodeId);
         ExceptionUtil.isNotNull(type, PermissionException.NODE_NOT_EXIST);
         return NodeType.toEnum(type);
     }
 
     @Override
     public NodeEntity getByNodeId(String nodeId) {
-        log.info("Query node: {}", nodeId);
-        NodeEntity nodeEntity = nodeMapper.selectByNodeId(nodeId);
+        NodeEntity nodeEntity = baseMapper.selectByNodeId(nodeId);
         ExceptionUtil.isNotNull(nodeEntity, PermissionException.NODE_NOT_EXIST);
         return nodeEntity;
     }
 
     @Override
+    public List<NodeEntity> getSubNodeList(String parentId) {
+        return baseMapper.selectByParentId(parentId);
+    }
+
+    @Override
     public List<String> getExistNodeIdsBySelf(List<String> nodeIds) {
-        return nodeMapper.selectNodeIdByNodeIdIn(nodeIds);
+        return baseMapper.selectNodeIdByNodeIdIn(nodeIds);
     }
 
     private List<NodeEntity> getByNodeIds(Collection<String> nodeIds) {
         log.info("Batch query node:{}", nodeIds);
-        List<NodeEntity> nodeEntities = nodeMapper.selectByNodeIds(nodeIds);
+        List<NodeEntity> nodeEntities = baseMapper.selectByNodeIds(nodeIds);
         ExceptionUtil.isNotEmpty(nodeEntities, PermissionException.NODE_NOT_EXIST);
         return nodeEntities;
     }
@@ -296,14 +308,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeId(String nodeId) {
         log.info("The id of the space where the query node is located.");
-        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
         ExceptionUtil.isNotNull(spaceId, PermissionException.NODE_NOT_EXIST);
         return spaceId;
     }
 
     @Override
     public String getSpaceIdByNodeIds(List<String> nodeIds) {
-        List<String> spaceIds = nodeMapper.selectSpaceIdsByNodeIds(nodeIds);
+        List<String> spaceIds = baseMapper.selectSpaceIdsByNodeIds(nodeIds);
         ExceptionUtil.isTrue(spaceIds.size() == 1, ParameterException.INCORRECT_ARG);
         return spaceIds.get(0);
     }
@@ -311,14 +323,14 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getSpaceIdByNodeIdIncludeDeleted(String nodeId) {
         log.info("Query the space ID of the node [{}] including deletion", nodeId);
-        return nodeMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
+        return baseMapper.selectSpaceIdByNodeIdIncludeDeleted(nodeId);
     }
 
     @Override
     public Boolean getIsTemplateByNodeIds(List<String> nodeIds) {
         log.info("Query whether all nodes [{}] belong to templates", nodeIds);
-        List<Boolean> result = nodeMapper.selectIsTemplateByNodeId(nodeIds);
-        ExceptionUtil.isTrue(result.size() > 0, PermissionException.NODE_NOT_EXIST);
+        List<Boolean> result = baseMapper.selectIsTemplateByNodeId(nodeIds);
+        ExceptionUtil.isTrue(!result.isEmpty(), PermissionException.NODE_NOT_EXIST);
         ExceptionUtil.isTrue(result.size() == 1, ParameterException.INCORRECT_ARG);
         return result.get(0);
     }
@@ -326,13 +338,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String getParentIdByNodeId(String nodeId) {
         log.info("The id of the parent node of the query node [{}]", nodeId);
-        return nodeMapper.selectParentIdByNodeId(nodeId);
+        return baseMapper.selectParentIdByNodeId(nodeId);
     }
 
     @Override
     public String getNodeNameByNodeId(String nodeId) {
         log.info("Query the node name of node [{}]", nodeId);
-        return nodeMapper.selectNodeNameByNodeId(nodeId);
+        return baseMapper.selectNodeNameByNodeId(nodeId);
     }
 
     @Override
@@ -362,19 +374,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<NodeBaseInfoDTO> getParentPathNodes(List<String> nodeIds, boolean includeRootNode) {
-        return nodeMapper.selectAllParentNodeIds(nodeIds, includeRootNode);
+        return nodeFacade.getParentPathNodes(nodeIds, includeRootNode);
     }
 
     @Override
     public List<NodeInfo> getNodeInfo(String spaceId, List<String> nodeIds, Long memberId) {
         log.info("Node information view of batch query [{}]", nodeIds);
-        return nodeMapper.selectNodeInfo(nodeIds, memberId);
+        return baseMapper.selectNodeInfo(nodeIds, memberId);
     }
 
     @Override
     public List<NodeInfo> getNodeInfoByNodeIds(Collection<String> nodeIds) {
         log.info("Node information view of batch query [{}]", nodeIds);
-        return nodeMapper.selectInfoByNodeIds(nodeIds);
+        return baseMapper.selectInfoByNodeIds(nodeIds);
     }
 
     @Override
@@ -389,7 +401,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return new ArrayList<>();
         }
         // Batch query node information
-        List<NodeInfoVo> infos = nodeMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
+        List<NodeInfoVo> infos = baseMapper.selectNodeInfoByNodeIds(roleDict.keySet(), memberId);
         // Node switches to memory custom sorting
         CollectionUtil.customSequenceSort(infos, NodeInfoVo::getNodeId,
             new ArrayList<>(roleDict.keySet()));
@@ -401,7 +413,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String checkNodeIfExist(String spaceId, String nodeId) {
         log.info("Check if the node exists");
-        String nodeSpaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        String nodeSpaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
         ExceptionUtil.isNotNull(nodeSpaceId, PermissionException.NODE_NOT_EXIST);
         // When the space id is not empty, check whether the space is cross-space.
         ExceptionUtil.isTrue(StrUtil.isBlank(spaceId) || nodeSpaceId.equals(spaceId),
@@ -438,7 +450,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public Long getMemberIdByUserIdAndNodeId(Long userId, String nodeId) {
-        String spaceId = nodeMapper.selectSpaceIdByNodeId(nodeId);
+        String spaceId = baseMapper.selectSpaceIdByNodeId(nodeId);
         if (StrUtil.isBlank(spaceId)) {
             return null;
         }
@@ -453,7 +465,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             return new ArrayList<>();
         }
         // fuzzy search results
-        List<String> nodeIds = nodeMapper.selectLikeNodeName(spaceId, StrUtil.trim(keyword));
+        List<String> nodeIds = baseMapper.selectLikeNodeName(spaceId, StrUtil.trim(keyword));
         List<NodeInfoVo> nodeInfos = this.getNodeInfoByNodeIds(spaceId, memberId, nodeIds);
         return formatNodeSearchResults(nodeInfos);
     }
@@ -472,7 +484,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (subNodeIds.isEmpty()) {
             return new ArrayList<>();
         }
-        List<NodeShareTree> shareTrees = nodeMapper.selectShareTree(subNodeIds);
+        List<NodeShareTree> shareTrees = baseMapper.selectShareTree(subNodeIds);
         // node switches to memory custom sort
         CollectionUtil.customSequenceSort(shareTrees, NodeShareTree::getNodeId, subNodeIds);
         return shareTrees;
@@ -496,7 +508,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .collect(Collectors.toList());
         while (!parentIds.isEmpty() && depth != 0) {
             List<NodeTreeDTO> subNode =
-                nodeMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish);
+                baseMapper.selectNodeTreeDTOByParentIdIn(parentIds, isRubbish);
             if (subNode.isEmpty()) {
                 break;
             }
@@ -521,35 +533,45 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     private List<String> sortNodeAtSameLevel(List<NodeTreeDTO> sub, NodeType nodeType) {
-        List<String> subNodeIds =
-            sub.stream().map(NodeTreeDTO::getNodeId).collect(Collectors.toList());
-        List<NodeTreeDTO> nodes = new ArrayList<>();
-        Optional<NodeTreeDTO> first =
-            sub.stream().filter(i -> i.getPreNodeId() == null).findFirst();
-        first.ifPresent(nodes::add);
-        nodes.addAll(sub.stream()
-            .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
-            .collect(Collectors.toList()));
-        if (nodes.isEmpty()) {
-            return subNodeIds;
+        List<NodeTreeDTO> firstNodes = sub.stream()
+            .filter(i -> i.getPreNodeId() == null)
+            .collect(Collectors.toList());
+        Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap = new LinkedHashMap<>();
+        for (NodeTreeDTO node : sub) {
+            String preNodeId = node.getPreNodeId();
+            List<NodeTreeDTO> sufNodes =
+                preNodeIdToNodesMap.computeIfAbsent(preNodeId, k -> new ArrayList<>());
+            sufNodes.add(node);
         }
         List<String> nodeIds = new ArrayList<>();
-        Map<String, NodeTreeDTO> preNodeIdToNodeMap = sub.stream()
-            .collect(Collectors.toMap(NodeTreeDTO::getPreNodeId, i -> i, (k1, k2) -> k2));
+        this.sufNodeRecurrence(firstNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
+        if (nodeIds.size() == sub.size()) {
+            return nodeIds;
+        }
+        List<String> subNodeIds = sub.stream().map(NodeTreeDTO::getNodeId).toList();
+        sub.stream()
+            .filter(i -> i.getPreNodeId() != null && !subNodeIds.contains(i.getPreNodeId()))
+            .forEach(node -> {
+                List<NodeTreeDTO> suffixNodes = Collections.singletonList(node);
+                this.sufNodeRecurrence(suffixNodes, nodeType, preNodeIdToNodesMap, nodeIds::add);
+            });
+        return nodeIds;
+    }
+
+    private void sufNodeRecurrence(List<NodeTreeDTO> nodes, NodeType nodeType,
+                                   Map<String, List<NodeTreeDTO>> preNodeIdToNodesMap,
+                                   Consumer<String> action) {
+        nodes.stream()
+            .filter(i -> nodeType == null || i.getType() == nodeType.getNodeType())
+            .map(NodeTreeDTO::getNodeId)
+            .forEach(action);
         for (NodeTreeDTO node : nodes) {
-            String preNodeId = node.getNodeId();
-            if (nodeType == null || node.getType() == nodeType.getNodeType()) {
-                nodeIds.add(preNodeId);
-            }
-            while (preNodeIdToNodeMap.containsKey(preNodeId)) {
-                NodeTreeDTO nodeTreeDTO = preNodeIdToNodeMap.get(preNodeId);
-                preNodeId = nodeTreeDTO.getNodeId();
-                if (nodeType == null || nodeTreeDTO.getType() == nodeType.getNodeType()) {
-                    nodeIds.add(preNodeId);
-                }
+            String nodeId = node.getNodeId();
+            if (preNodeIdToNodesMap.containsKey(nodeId)) {
+                List<NodeTreeDTO> sufNodes = preNodeIdToNodesMap.get(nodeId);
+                this.sufNodeRecurrence(sufNodes, nodeType, preNodeIdToNodesMap, action);
             }
         }
-        return nodeIds;
     }
 
     @Override
@@ -558,7 +580,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         log.info("Query the list of child nodes ");
         // Get a direct child node
         List<NodeTreeDTO> subNode =
-            nodeMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false);
+            baseMapper.selectNodeTreeDTOByParentIdIn(Collections.singleton(nodeId), false);
         if (subNode.isEmpty()) {
             return new ArrayList<>();
         }
@@ -592,7 +614,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         parentNodeIds.remove(nodeId);
         // The parent node supplements the tree node load.
         List<NodeTreeDTO> subNode =
-            nodeMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false);
+            baseMapper.selectNodeTreeDTOByParentIdIn(parentNodeIds, false);
         Map<String, List<NodeTreeDTO>> parentIdToSubNodeMap =
             subNode.stream().collect(Collectors.groupingBy(NodeTreeDTO::getParentId));
         List<String> viewNodeIds = new ArrayList<>();
@@ -607,7 +629,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public NodeInfoVo getNodeInfoByNodeId(String spaceId, String nodeId, ControlRole role) {
         log.info("Query node information ");
-        NodeInfoVo nodeInfo = nodeMapper.selectNodeInfoByNodeId(nodeId);
+        NodeInfoVo nodeInfo = baseMapper.selectNodeInfoByNodeId(nodeId);
         SpaceGlobalFeature feature = iSpaceService.getSpaceGlobalFeature(spaceId);
         nodeInfo.setRole(role.getRoleTag());
         nodeInfo.setPermissions(role.permissionToBean(NodePermissionView.class, feature));
@@ -627,7 +649,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 .reduce(new ArrayList<>(),
                     (nodes, item) -> {
                         List<NodeInfoTreeVo> childNodes =
-                            nodeMapper.selectNodeInfoTreeByNodeIds(item, memberId);
+                            baseMapper.selectNodeInfoTreeByNodeIds(item, memberId);
                         nodes.addAll(childNodes);
                         return nodes;
                     },
@@ -657,7 +679,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public String createDatasheetNode(Long userId, String spaceId, DatasheetCreateObject object) {
-        String nodeId = IdUtil.createNodeId(object.getType().getNodeType());
+        String nodeId = IdUtil.createNodeId(object.getType());
         NodeEntity nodeEntity = NodeEntity.builder()
             .spaceId(spaceId)
             .parentId(object.getParentId())
@@ -691,7 +713,11 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         String name =
             duplicateNameModify(nodeOpRo.getParentId(), nodeOpRo.getType(), nodeOpRo.getNodeName(),
                 null);
-        String nodeId = IdUtil.createNodeId(nodeOpRo.getType());
+        NodeType nodeType = NodeType.toEnum(nodeOpRo.getType());
+        if (!nodeType.isFolder()) {
+            iSpaceService.checkFileNumOverLimit(spaceId);
+        }
+        String nodeId = IdUtil.createNodeId(nodeType);
         // If the new node is a file, it corresponds to the creation of a datasheet form.
         this.createFileMeta(userId, spaceId, nodeId, nodeOpRo.getType(), name, nodeOpRo.getExtra());
         // When an empty string is not passed in,
@@ -703,10 +729,11 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .preNodeId(preNodeId)
             .nodeName(name)
             .type(nodeOpRo.getType())
+            .extra(JSONUtil.toJsonStr(nodeOpRo.getExtra()))
             .nodeId(nodeId)
             .build();
         // Change the front node ID of the next node to the new node ID(A <- C => B <- C)
-        nodeMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
+        baseMapper.updatePreNodeIdBySelf(nodeId, preNodeId, nodeOpRo.getParentId());
         boolean flag = save(nodeEntity);
         ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         return nodeEntity.getNodeId();
@@ -764,7 +791,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             }
             // Verify that the number of nodes reaches the upper limit
             // iSubscriptionService.checkSheetNums(nodeList.get(0).getSpaceId(), dstCount);
-            boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(nodeList));
+            boolean flag = SqlHelper.retBool(baseMapper.insertBatch(nodeList));
             ExceptionUtil.isTrue(flag, DatabaseException.INSERT_ERROR);
         }
     }
@@ -786,19 +813,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         this.updateNodeCover(userId, nodeId, opRo.getCover(), nodeEntity.getCover());
 
         // Modify whether to display the history of the record
-        if (ObjectUtil.isNotNull(opRo.getShowRecordHistory())
-            && nodeEntity.getType() == NodeType.DATASHEET.getNodeType()) {
-            boolean flag;
-            String newValue = JSONUtil.toJsonStr(Dict.create()
-                .set(NodeExtraConstants.SHOW_RECORD_HISTORY, opRo.getShowRecordHistory()));
-            if (ObjectUtil.isNotNull(nodeEntity.getExtra())) {
-                flag = SqlHelper.retBool(nodeMapper.updateExtraShowRecordHistoryByNodeId(nodeId,
-                    opRo.getShowRecordHistory()));
-            } else {
-                flag = SqlHelper.retBool(nodeMapper.updateExtraByNodeId(nodeId, newValue));
-            }
-            ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
-        }
+        this.updateExtra(nodeId, NodeType.toEnum(nodeEntity.getType()), nodeEntity.getExtra(),
+            opRo.getShowRecordHistory(), opRo.getEmbedPage());
     }
 
     private void updateNodeName(Long userId, String nodeId, String name, NodeEntity entity) {
@@ -807,7 +823,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         }
         // Prevent peer directory, duplicate name modification
         String nodeName = duplicateNameModify(entity.getParentId(), entity.getType(), name, nodeId);
-        boolean flag = SqlHelper.retBool(nodeMapper.updateNameByNodeId(nodeId, nodeName));
+        boolean flag = SqlHelper.retBool(baseMapper.updateNameByNodeId(nodeId, nodeName));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // Correspondingly modify the name.
         switch (NodeType.toEnum(entity.getType())) {
@@ -845,7 +861,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (icon.trim().equals(StrUtil.EMPTY)) {
             icon = StrUtil.EMPTY;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.updateIconByNodeId(nodeId, icon));
+        boolean flag = SqlHelper.retBool(baseMapper.updateIconByNodeId(nodeId, icon));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // publish space audit events
         JSONObject info = JSONUtil.createObj();
@@ -869,7 +885,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if ("null".equalsIgnoreCase(cover) || "undefined".equalsIgnoreCase(cover)) {
             cover = null;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.updateCoverByNodeId(nodeId, cover));
+        boolean flag = SqlHelper.retBool(baseMapper.updateCoverByNodeId(nodeId, cover));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
         // the old cover map reduces the number of references
         if (StrUtil.startWith(oldNodeCover, SPACE_PREFIX)) {
@@ -945,7 +961,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         // if the pre-node is deleted or not under the parent id, the move fails.
         String preNodeId = this.verifyPreNodeId(opRo.getPreNodeId(), parentId);
         // The next node that records the old and new locations
-        List<String> suffixNodeIds = nodeMapper.selectNodeIdByPreNodeIdIn(
+        List<String> suffixNodeIds = baseMapper.selectNodeIdByPreNodeIdIn(
             CollUtil.newArrayList(nodeEntity.getNodeId()));
         nodeIds.addAll(suffixNodeIds);
         Lock lock = redisLockRegistry.obtain(parentId);
@@ -953,19 +969,19 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             if (lock.tryLock(2, TimeUnit.MINUTES)) {
                 // Update the front node of the latter node
                 // to the front node of the node (A <- X <- C => A <- C)
-                nodeMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
+                baseMapper.updatePreNodeIdBySelf(nodeEntity.getPreNodeId(),
                     nodeEntity.getNodeId(), nodeEntity.getParentId());
                 // Update the sequence relationship of nodes before
                 // and after the move (D <- E => D <- X <- E)
                 String sufNodeId =
-                    nodeMapper.selectNodeIdByParentIdAndPreNodeId(parentId, preNodeId);
+                    baseMapper.selectNodeIdByParentIdAndPreNodeId(parentId, preNodeId);
                 if (sufNodeId != null) {
                     nodeIds.add(sufNodeId);
-                    nodeMapper.updatePreNodeIdByNodeId(nodeEntity.getNodeId(), sufNodeId);
+                    baseMapper.updatePreNodeIdByNodeId(nodeEntity.getNodeId(), sufNodeId);
                 }
                 // Update the information of this node (the ID of the previous
                 // node may be updated to null, so update By id is not used)
-                nodeMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name);
+                baseMapper.updateInfoByNodeId(nodeEntity.getNodeId(), parentId, preNodeId, name);
             } else {
                 throw new BusinessException("Frequent operations");
             }
@@ -1016,7 +1032,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             Collection<String> subNodeIds = CollUtil.disjunction(nodeIds, idList);
             if (!subNodeIds.isEmpty()) {
                 boolean flag =
-                    SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId,
+                    SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId,
                         subNodeIds, true));
                 ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
             }
@@ -1027,6 +1043,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             // if node is ai chat bot, auto delete
             aiServiceFacade.deleteAi(nodeIds);
             iAutomationRobotService.updateIsDeletedByResourceIds(userId, nodeIds, true);
+            documentServiceFacade.remove(userId, nodeIds);
         }
         for (NodeEntity node : nodes) {
             Lock lock = redisLockRegistry.obtain(node.getParentId());
@@ -1037,12 +1054,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     // (Large datasheet processing takes a long time,
                     // node.getPreNodeId() may have changed,
                     // so updatePreNodeIdBySelf is not used directly)
-                    nodeMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
+                    baseMapper.updatePreNodeIdByJoinSelf(nodeId, node.getParentId());
                     // Save the path of the deletion.
                     // Specify that the deleted node is attached to the parent node -1.
                     String delPath = MapUtil.isNotEmpty(parentIdToPathMap)
                         ? parentIdToPathMap.get(node.getParentId()) : null;
-                    nodeMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
+                    baseMapper.updateDeletedPathByNodeId(userId, nodeId, delPath);
                     // publish space audit events
                     ClientOriginInfo clientOriginInfo = InformationUtil
                         .getClientOriginInfoInCurrentHttpContext(true, false);
@@ -1077,7 +1094,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         }
         // delete node and datasheet information
         boolean flag =
-            SqlHelper.retBool(nodeMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
+            SqlHelper.retBool(baseMapper.updateIsRubbishByNodeIdIn(userId, nodeIds, true));
         ExceptionUtil.isTrue(flag, DatabaseException.DELETE_ERROR);
         iDatasheetService.updateIsDeletedStatus(userId, nodeIds, true);
         // delete the spatial attachment resource of the node
@@ -1110,13 +1127,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             .nodeName(name)
             .type(copyNode.getType())
             .preNodeId(opRo.getNodeId())
-            .newNodeId(IdUtil.createNodeId(copyNode.getType()))
+            .newNodeId(IdUtil.createNodeId(nodeType))
             .icon(copyNode.getIcon())
             .cover(copyNode.getCover())
             .extra(copyNode.getExtra())
             .build();
         // Update the former node of the latter node to the copied node (A <- B => A <- A' <- B)
-        nodeMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
+        baseMapper.updatePreNodeIdBySelf(createNodeDto.getNewNodeId(), opRo.getNodeId(),
             copyNode.getParentId());
         // save node
         String copyNodeId = createChildNode(userId, createNodeDto);
@@ -1147,8 +1164,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 return copyEffect;
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().sameSpace(true).overriddenName(name).build();
-                iAutomationRobotService.copy(userId, Collections.singletonList(opRo.getNodeId()),
+                    AutomationCopyOptions.builder().sameSpace(true).removeButtonClickedInput(true)
+                        .overriddenName(name).build();
+                iAutomationRobotService.copy(userId,
+                    Collections.singletonList(opRo.getNodeId()),
                     automationCopyOptions, newNodeMap);
                 return copyEffect;
             default:
@@ -1194,7 +1213,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         log.info("Copy node to space ");
         // No parent node is specified, take the root node as the parent node
         if (StrUtil.isBlank(destParentId)) {
-            destParentId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
+            destParentId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
         }
         Lock lock = redisLockRegistry.obtain(destParentId);
         try {
@@ -1212,23 +1231,23 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     private String saveDumpedNode(Long userId, String spaceId, String destParentId,
                                   String sourceNodeId, NodeCopyOptions options) {
-        NodeEntity shareNode = nodeMapper.selectByNodeId(sourceNodeId);
+        NodeEntity shareNode = baseMapper.selectByNodeId(sourceNodeId);
         String name = StrUtil.isNotBlank(options.getNodeName())
             ? options.getNodeName() : shareNode.getNodeName();
+        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         String toSaveNodeId = StrUtil.isNotBlank(options.getNodeId())
-            ? options.getNodeId() : IdUtil.createNodeId(shareNode.getType());
+            ? options.getNodeId() : IdUtil.createNodeId(nodeType);
         if (!options.isTemplate()) {
             // check for the same name
             name = duplicateNameModify(destParentId, shareNode.getType(), name, null);
             // update the original first node, and move the position one bit later,
             // that is, the pre-node is the shared node that is transferred.
-            nodeMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
+            baseMapper.updatePreNodeIdBySelf(toSaveNodeId, null, destParentId);
         }
 
         // component node id map
-        Map<String, String> newNodeMap = CollUtil.newHashMap();
+        Map<String, String> newNodeMap = new HashMap<>();
         newNodeMap.put(sourceNodeId, toSaveNodeId);
-        NodeType nodeType = NodeType.toEnum(shareNode.getType());
         switch (nodeType) {
             case ROOT:
                 throw new BusinessException(NodeException.NOT_ALLOW);
@@ -1257,14 +1276,18 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                 throw new BusinessException(NodeException.SHARE_NODE_STORE_FAIL);
             case AUTOMATION:
                 AutomationCopyOptions automationCopyOptions =
-                    AutomationCopyOptions.builder().overriddenName(name).build();
-                iAutomationRobotService.copy(userId, Collections.singletonList(sourceNodeId),
+                    AutomationCopyOptions.builder().removeButtonClickedInput(true)
+                        .overriddenName(name).build();
+                iAutomationRobotService.copy(userId,
+                    Collections.singletonList(sourceNodeId),
                     automationCopyOptions, newNodeMap);
+
                 break;
             default:
                 break;
         }
         NodeEntity toSaveNode = new NodeEntity();
+        toSaveNode.setId(IdWorker.getId());
         toSaveNode.setNodeId(toSaveNodeId);
         toSaveNode.setNodeName(name);
         toSaveNode.setCover(shareNode.getCover());
@@ -1294,7 +1317,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         toSaveNode.setExtra(JSONUtil.toJsonStr(extraObj));
         toSaveNode.setCreatedBy(userId);
         toSaveNode.setUpdatedBy(userId);
-        this.save(toSaveNode);
+        baseMapper.insert(toSaveNode);
         // description of batch replication nodes
         iNodeDescService.copyBatch(newNodeMap);
         // Batch copy of spatial attachment resources referenced by nodes
@@ -1328,7 +1351,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             originNodeToPreNodeMap.put(sub.getNodeId(), sub.getPreNodeId());
             // Supplement the ID mapping relationship between the original node and the new node
             if (!filterNodeIds.contains(sub.getNodeId())) {
-                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(sub.getType()));
+                NodeType nodeType = NodeType.toEnum(sub.getType());
+                newNodeMap.put(sub.getNodeId(), IdUtil.createNodeId(nodeType));
             }
         });
         List<NodeEntity> storeEntities = new ArrayList<>();
@@ -1360,10 +1384,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             node.setUpdatedBy(userId);
             storeEntities.add(node);
         }
-        if (storeEntities.size() == 0) {
+        if (storeEntities.isEmpty()) {
             return;
         }
-        boolean flag = SqlHelper.retBool(nodeMapper.insertBatch(storeEntities));
+        boolean flag = SqlHelper.retBool(baseMapper.insertBatch(storeEntities));
         ExceptionUtil.isTrue(flag, NodeException.SHARE_NODE_STORE_FAIL);
         // Copy datasheet processing
         if (nodeTypeToNodeIdsMap.containsKey(NodeType.DATASHEET.getNodeType())) {
@@ -1381,6 +1405,23 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     });
                 options.setDstPermissionFieldsMap(dstPermissionFieldsMap);
             }
+
+            // Copy automation processing
+            if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
+                List<String> automationNodeIds =
+                    nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
+                        .map(NodeShareTree::getNodeId)
+                        .filter(nodeId -> !filterNodeIds.contains(nodeId))
+                        .collect(Collectors.toList());
+                if (CollUtil.isNotEmpty(automationNodeIds)) {
+                    TriggerCopyResultDto result =
+                        iAutomationRobotService.copy(userId, automationNodeIds,
+                            new AutomationCopyOptions(), newNodeMap);
+                    // use for rewrite button field property
+                    options.setNewTriggerMap(result.getNewTriggerMap());
+                }
+            }
+
             for (NodeShareTree subNode : nodeTypeToNodeIdsMap.get(
                 NodeType.DATASHEET.getNodeType())) {
                 if (filterNodeIds.contains(subNode.getNodeId())) {
@@ -1425,18 +1466,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     ResourceType.MIRROR);
             }
         }
-        // Copy automation processing
-        if (nodeTypeToNodeIdsMap.containsKey(NodeType.AUTOMATION.getNodeType())) {
-            List<String> automationNodeIds =
-                nodeTypeToNodeIdsMap.get(NodeType.AUTOMATION.getNodeType()).stream()
-                    .map(NodeShareTree::getNodeId)
-                    .filter(nodeId -> !filterNodeIds.contains(nodeId))
-                    .collect(Collectors.toList());
-            if (CollUtil.isNotEmpty(automationNodeIds)) {
-                iAutomationRobotService.copy(userId, automationNodeIds,
-                    new AutomationCopyOptions(), newNodeMap);
-            }
-        }
+
     }
 
     /**
@@ -1491,7 +1521,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public void updateNodeBanStatus(String nodeId, Integer status) {
         log.info("Ban or unban nodes ");
-        boolean flag = SqlHelper.retBool(nodeMapper.updateNodeBanStatus(nodeId, status));
+        boolean flag = SqlHelper.retBool(baseMapper.updateNodeBanStatus(nodeId, status));
         ExceptionUtil.isTrue(flag, DatabaseException.EDIT_ERROR);
     }
 
@@ -1501,7 +1531,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public String duplicateNameModify(String parentId, int nodeType, String nodeName,
                                       String nodeId) {
-        List<String> nameList = nodeMapper.selectNameList(parentId, nodeType, nodeId);
+        List<String> nameList = baseMapper.selectNameList(parentId, nodeType, nodeId);
         int i = 2;
         String name = nodeName;
         while (nameList.contains(name)) {
@@ -1513,7 +1543,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public List<String> checkSubNodePermission(Long memberId, String nodeId, ControlRole role) {
-        boolean hasChildren = nodeMapper.selectHasChildren(nodeId);
+        boolean hasChildren = baseMapper.selectHasChildren(nodeId);
         if (!hasChildren) {
             return null;
         }
@@ -1526,7 +1556,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         List<String> filterNodeIds = roleDict.entrySet().stream()
             .filter(entry -> entry.getValue().isGreaterThanOrEqualTo(role))
-            .map(Map.Entry::getKey).collect(Collectors.toList());
+            .map(Map.Entry::getKey).toList();
         ExceptionUtil.isTrue(subNodeIds.size() == filterNodeIds.size(),
             TemplateException.SUB_NODE_PERMISSION_INSUFFICIENT);
         return subNodeIds;
@@ -1609,11 +1639,10 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                     JSONUtil.createObj().toString());
                 break;
             case AI_CHAT_BOT:
-                iSpaceService.checkSeatOverLimit(spaceId, 1);
+                iSpaceService.checkChatBotNumsOverLimit(spaceId);
                 aiServiceFacade.createAi(AiCreateParam.builder()
                     .spaceId(spaceId)
                     .aiId(nodeId)
-                    .type(AiType.QA)
                     .aiName(name)
                     .build()
                 );
@@ -1638,7 +1667,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
         if (StrUtil.isBlank(preNodeId)) {
             return null;
         } else {
-            String id = nodeMapper.selectParentIdByNodeId(preNodeId);
+            String id = baseMapper.selectParentIdByNodeId(preNodeId);
             ExceptionUtil.isTrue(parentId.equals(id), PermissionException.NODE_ACCESS_DENIED);
             return preNodeId;
         }
@@ -1683,27 +1712,18 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public String parseExcel(Long userId, String uuid, String spaceId,
                              Long memberId, String parentNodeId, String viewName, String fileName,
                              String fileSuffix, InputStream inputStream) {
-        ExcelReader excelReader = null;
         MultiSheetReadListener readListener =
             new MultiSheetReadListener(this, userId, uuid, spaceId, memberId,
                 parentNodeId, viewName, fileName);
-        ExcelReaderBuilder readerBuilder;
         ExcelTypeEnum excelType = FileSuffixConstants.XLS.equals(fileSuffix)
             ? ExcelTypeEnum.XLS : ExcelTypeEnum.XLSX;
-        try {
-            readerBuilder = EasyExcel.read(inputStream)
-                .excelType(excelType)
-                .ignoreEmptyRow(false).autoTrim(false);
-            excelReader = readerBuilder.registerReadListener(readListener).build();
+        ExcelReaderBuilder readerBuilder = EasyExcel.read(inputStream)
+            .excelType(excelType)
+            .ignoreEmptyRow(false).autoTrim(false);
+        try (ExcelReader excelReader = readerBuilder.registerReadListener(readListener).build()) {
             List<ReadSheet> readSheets = excelReader.excelExecutor().sheetList();
             excelReader.read(readSheets);
             return readListener.getRetNodeData().getNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
@@ -1712,23 +1732,13 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     public String parseCsv(Long userId, String uuid, String spaceId, Long memberId,
                            String parentNodeId, String viewName, String fileName,
                            InputStream inputStream) {
-        ExcelReader excelReader = null;
         CsvReadListener readListener =
             new CsvReadListener(this, userId, uuid, spaceId, memberId,
                 parentNodeId, viewName, fileName);
-        try {
-            excelReader = EasyExcel.read(inputStream)
-                .excelType(ExcelTypeEnum.CSV)
-                .registerReadListener(readListener)
-                .build();
+        try (ExcelReader excelReader = EasyExcel.read(inputStream).excelType(ExcelTypeEnum.CSV)
+            .registerReadListener(readListener).build()) {
             excelReader.readAll();
             return readListener.getRetNodeId();
-        } finally {
-            if (excelReader != null) {
-                // Don't forget to close it here.
-                // Temporary files will be created when reading, and the disk will collapse.
-                excelReader.finish();
-            }
         }
     }
 
@@ -1739,9 +1749,9 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
                                      List<DatasheetMetaEntity> metaEntities,
                                      List<DatasheetRecordEntity> recordEntities) {
 
-        nodeMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
+        baseMapper.updatePreNodeIdBySelf(data.getNodeId(), null, data.getParentId());
 
-        nodeMapper.insertBatch(nodeEntities);
+        baseMapper.insertBatch(nodeEntities);
 
         iDatasheetService.batchSave(datasheetEntities);
 
@@ -1762,7 +1772,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             spaceId = getSpaceIdByNodeId(nodeId);
         }
         if (StrUtil.isBlank(extras)) {
-            extras = nodeMapper.selectExtraByNodeId(nodeId);
+            extras = baseMapper.selectExtraByNodeId(nodeId);
         }
         NodeExtraDTO nodeExtraDTO = JSONUtil.toBean(extras, NodeExtraDTO.class);
         SocialConnectInfo connectInfo = socialServiceFacade.getConnectInfo(spaceId);
@@ -1833,7 +1843,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     @Override
     public Optional<String> getNodeName(String nodeId, Long userId) {
         // 1. query the space id and node name of the node
-        UrlNodeInfoDTO urlNodeInfo = nodeMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
+        UrlNodeInfoDTO urlNodeInfo = baseMapper.selectSpaceIdAndNodeNameByNodeId(nodeId);
 
         if (ObjectUtil.isNull(urlNodeInfo)) {
             return Optional.empty();
@@ -1855,7 +1865,7 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public void checkEnableOperateNodeBySpaceFeature(Long memberId, String spaceId, String nodeId) {
-        Integer nodeType = nodeMapper.selectNodeTypeByNodeId(nodeId);
+        Integer nodeType = baseMapper.selectNodeTypeByNodeId(nodeId);
         // 1. whether the node is the root node
         if (NodeType.toEnum(nodeType) != NodeType.ROOT) {
             return;
@@ -1881,8 +1891,8 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
 
     @Override
     public boolean isNodeBelongRootFolder(String spaceId, String nodeId) {
-        String rootNodeId = nodeMapper.selectRootNodeIdBySpaceId(spaceId);
-        String parentNodeId = nodeMapper.selectParentIdByNodeId(nodeId);
+        String rootNodeId = baseMapper.selectRootNodeIdBySpaceId(spaceId);
+        String parentNodeId = baseMapper.selectParentIdByNodeId(nodeId);
         return ObjectUtil.isNotNull(rootNodeId) && rootNodeId.equals(parentNodeId);
     }
 
@@ -1905,8 +1915,12 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
     }
 
     @Override
-    public String getNodeIdByParentIdAndNodeName(String parentNodeId, String nodeName) {
-        return baseMapper.selectNodeIdByParentIdAndNodeName(parentNodeId, nodeName);
+    public Optional<NodeEntity> findSameNameInSameLevel(String parentNodeId,
+                                                        String nodeName) {
+        List<NodeEntity> nodeEntities = getSubNodeList(parentNodeId);
+        return nodeEntities.stream()
+            .filter(node -> node.getNodeName().equals(nodeName))
+            .findFirst();
     }
 
     private List<NodeSearchResult> formatNodeSearchResults(List<NodeInfoVo> nodeInfoList) {
@@ -1927,6 +1941,31 @@ public class NodeServiceImpl extends ServiceImpl<NodeMapper, NodeEntity> impleme
             results.add(result);
         });
         return results;
+    }
+
+    private boolean updateExtra(String nodeId, NodeType nodeType, String oldExtra,
+                                Integer showRecordHistory,
+                                NodeEmbedPageRo embedPage) {
+        if (null == showRecordHistory && null == embedPage) {
+            // dont need to update
+            return true;
+        }
+        Dict extra = Dict.create();
+        // Modify whether to display the history of the record
+        if (ObjectUtil.isNotNull(showRecordHistory) && NodeType.DATASHEET.equals(nodeType)) {
+            extra.set(NodeExtraConstants.SHOW_RECORD_HISTORY, showRecordHistory);
+        }
+        // embed page info
+        if (ObjectUtil.isNotNull(embedPage) && NodeType.EMBED_PAGE.equals(nodeType)) {
+            extra.set(NodeExtraConstants.EMBED_PAGE, embedPage);
+        }
+        if (null == oldExtra) {
+            return SqlHelper.retBool(
+                baseMapper.insertExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
+        } else {
+            return SqlHelper.retBool(
+                baseMapper.updateExtraByNodeId(nodeId, JSONUtil.toJsonStr(extra)));
+        }
     }
 
 }
